--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-
+          
       - name: Run tests
         run: |
           pytest
+
+      - name: Train model
+        run: |
+          python train_model.py
