--- a/.github/workflows/devops-pipeline.yml
+++ b/.github/workflows/devops-pipeline.yml
@@ -2,63 +2,72 @@ name: AI-Powered DevOps Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
+  schedule:
+    - cron: '0 0 * * *'  # Daily run
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-
-      - name: Run tests
-        run: |
-          pytest -n auto | tee build_log.txt
-
-      - name: Check for dependency issues
-        id: dependency_check
-        run: |
-          if grep "ModuleNotFoundError" build_log.txt; then
-            echo "Dependency issue detected"
-            echo "retry=true" >> $GITHUB_ENV
-          else
-            echo "No dependency issues"
-            echo "retry=false" >> $GITHUB_ENV
-          fi
-
-      - name: Fix dependencies and retry
-        if: env.retry == 'true'
-        run: |
-          python scripts/self_heal.py
-          pytest -n auto | tee build_log.txt
-
-      - name: Train model
-        run: |
-          python scripts/train_model.py
-
-      - name: Notify Slack (Failure)
-        if: failure()
-        env:
-          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-        run: |
-          python scripts/notify_slack.py "❌ Build failed"
-
-      - name: Notify Slack (Success)
-        if: success()
-        env:
-          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-        run: |
-          python scripts/notify_slack.py "✅ Build succeeded"
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch all history for all branches and tags
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+        cache: 'pip'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
+    - name: Run security checks
+      run: |
+        pip install bandit safety
+        bandit -r . -ll
+        safety check
+        
+    - name: Run tests
+      id: test
+      run: |
+        pytest -n auto --junitxml=test-results.xml | tee build_log.txt
+      continue-on-error: true
+    
+    - name: Check for issues
+      id: check_issues
+      run: |
+        python scripts/self_heal.py
+        echo "has_issues=$(grep -c "Error" build_log.txt || true)" >> $GITHUB_OUTPUT
+        
+    - name: Retry tests if needed
+      if: steps.check_issues.outputs.has_issues != '0'
+      run: |
+        pytest -n auto --junitxml=test-results.xml
+        
+    - name: Train and validate model
+      run: |
+        python scripts/train_model.py
+        
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-results
+        path: |
+          test-results.xml
+          build_log.txt
+          models/
+          
+    - name: Notify Slack
+      if: always()
+      env:
+        SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
+      run: |
+        python scripts/notify_slack.py "$(if [ ${{ job.status }} == 'success' ]; then echo '✅ Build succeeded'; else echo '❌ Build failed'; fi)"
