--- a/.github/workflows/devops-pipeline.yml
+++ b/.github/workflows/devops-pipeline.yml
@@ -1,75 +1,77 @@
 name: AI-Powered DevOps Pipeline
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
-  schedule:
-    - cron: '0 0 * * *'  # Daily run
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        python-version: ['3.9']
+    
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # Fetch all history for all branches and tags
+        fetch-depth: 0
 
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: ${{ matrix.python-version }}
         cache: 'pip'
+        cache-dependency-path: 'requirements.txt'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest-xdist coverage
 
     - name: Run security checks
       run: |
-        pip install bandit safety
         bandit -r . -ll
-        safety check
+        safety scan --output json > safety-report.json
 
-    - name: Run tests
-      id: test
+    - name: Run tests with coverage
       run: |
-        pytest -n auto --junitxml=test-results.xml | tee build_log.txt
-      continue-on-error: true
+        pytest -n auto --cov=scripts --cov-report=xml --junitxml=test-results.xml
 
-    - name: Check for issues
-      id: check_issues
-      run: |
-        python scripts/self_heal.py
-        echo "has_issues=$(grep -c "Error" build_log.txt || true)" >> $GITHUB_OUTPUT
-
-    - name: Retry tests if needed
-      if: steps.check_issues.outputs.has_issues != '0'
-      run: |
-        pytest -n auto --junitxml=test-results.xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage.xml
 
     - name: Train and validate model
-      run: |
-        python scripts/train_model.py
+      run: python scripts/train_model.py
+      env:
+        SMOTE_SAMPLING: 'true'
 
     - name: Predict Pipeline Risk
-      run: |
-        python scripts/predict_risk.py
+      run: python scripts/predict_risk.py
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
-    - name: Upload test results
-      if: always()
-      uses: actions/upload-artifact@v4
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v3
       with:
-        name: test-results
+        name: pipeline-artifacts
         path: |
           test-results.xml
-          build_log.txt
+          coverage.xml
+          safety-report.json
           models/
+          data/risk_predictions.csv
 
     - name: Notify Slack
-      if: always()
       env:
         SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
+        CI_STATUS: "${{ job.status }}"
       run: |
-        python scripts/notify_slack.py "$(if [ '${{ job.status }}' == 'success' ]; then echo '✅ Build succeeded'; else echo '❌ Build failed'; fi)"
+        python scripts/notify_slack.py "$CI_STATUS"
