--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
-bandit
-safety
-pytest
-pytest-xdist
-slack-sdk
-scikit-learn
-pandas
-joblib
-psutil
-numpy
-flask
-matplotlib
-seaborn
-pytest-mock
+# Core
+python>=3.9
+scikit-learn==1.6.1
+pandas==2.2.3
+numpy==2.0.2
+joblib==1.4.2
+
+# DevOps
+slack-sdk==3.34.0
+pytest==8.3.4
+pytest-xdist==3.6.1
+bandit==1.8.2
+safety==3.2.14
+
+# ML/AI
+imbalanced-learn==0.12.2
+openai==1.30.1
+
+# Utilities
+python-dotenv==1.0.1
+psutil==6.1.1
+matplotlib==3.9.4
+seaborn==0.13.2
+
+requests==2.31.0 
