--- a/.github/workflows/devops-pipeline.yml
+++ b/.github/workflows/devops-pipeline.yml
@@ -15,9 +15,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        persist-credentials: false
 
-    - name: Set up Python
+    - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
@@ -27,43 +26,30 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt pytest-xdist
+        pip install -r requirements.txt
 
     - name: Run security checks
       run: |
-        bandit -r . -ll -f json -o bandit-report.json
-        safety check --output json safety-report.json
+        bandit -r . -ll
+        safety check
 
     - name: Run tests
       run: |
-        pytest -n auto --junitxml=test-results.xml --cov=scripts --cov-report=xml | tee build_log.txt
+        pytest -n auto --junitxml=test-results.xml --cov=scripts --cov-report=xml
 
-    - name: Upload test results
+    - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: test-artifacts
+        name: pipeline-artifacts
         path: |
           test-results.xml
-          build_log.txt
-          .coverage
           coverage.xml
-          bandit-report.json
-          safety-report.json
-          models/
+          .coverage
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: coverage.xml
-        fail_ci_if_error: false
-
-    - name: Train and validate model
+    - name: Train model
       run: python scripts/train_model.py
-      env:
-        SMOTE_SAMPLING: 'true'
 
-    - name: Predict Pipeline Risk
+    - name: Predict risks
       run: python scripts/predict_risk.py
       env:
         QWEN_API_KEY: ${{ secrets.QWEN_API_KEY }}
@@ -71,6 +57,5 @@ jobs:
     - name: Notify Slack
       env:
         SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-        GITHUB_ARTIFACT_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
       run: |
         python scripts/notify_slack.py "${{ job.status }}"
