--- a/.github/workflows/devops-pipeline.yml
+++ b/.github/workflows/devops-pipeline.yml
@@ -13,10 +13,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
-    - name: Set up Python 3.9
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
@@ -31,7 +29,7 @@ jobs:
     - name: Run security checks
       run: |
         bandit -r . -ll
-        safety check
+        safety scan  # Updated from deprecated 'check'
 
     - name: Run tests
       run: |
@@ -44,7 +42,7 @@ jobs:
         path: |
           test-results.xml
           coverage.xml
-          .coverage
+          models/
 
     - name: Train model
       run: python scripts/train_model.py
