--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-scikit-learn==1.3.2
+scikit-learn==1.5.0  # Patched security vulnerability
 pandas==2.2.3
-numpy 
+numpy>=1.23.5,<2.0.0  # Compatible with scikit-learn 1.5.0
 joblib==1.4.2
 slack-sdk==3.34.0
 pytest==8.3.4
