--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-scikit-learn==1.5.0  # Patched security vulnerability
+scikit-learn==1.5.0
 pandas==2.2.3
-numpy>=1.23.5,<2.0.0  # Compatible with scikit-learn 1.5.0
+numpy>=1.23.5,<2.0.0
 joblib==1.4.2
 slack-sdk==3.34.0
 pytest==8.3.4
@@ -14,3 +14,4 @@ psutil==6.1.1
 matplotlib==3.9.4
 seaborn==0.13.2
 pytest-cov==6.0.0
+defusedxml>=0.7.1
