--- a/.github/workflows/devops-pipeline.yml
+++ b/.github/workflows/devops-pipeline.yml
@@ -30,8 +30,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install --force-reinstall -r requirements.txt
         pip install -r requirements.txt
-
+        
     - name: Run security checks
       run: |
         bandit -r . -ll --exclude ./venv,./tests
